<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/deshboard">

   <!-- <fragment
        android:id="@+id/home"
        android:name="com.example.navigationcomponentwithbottomnavigationanddrawer.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/about"
        android:name="com.example.navigationcomponentwithbottomnavigationanddrawer.AboutFragment"
        android:label="fragment_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/bookmark"
        android:name="com.example.navigationcomponentwithbottomnavigationanddrawer.BookmarkFragment"
        android:label="fragment_bookmark"
        tools:layout="@layout/fragment_bookmark" />

-->
    <fragment
        android:id="@+id/deshboard"
        android:name="com.crypto.croytowallet.fragement.Deshboard"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_deshboard" />
    <fragment
        android:id="@+id/myWallet"
        android:name="com.crypto.croytowallet.fragement.Wallet"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_mywallet" />
    <fragment
        android:id="@+id/exchange"
        android:name="com.crypto.croytowallet.fragement.Exchange"
        android:label="@string/exchange"
        tools:layout="@layout/fragment_exchange" />
    <fragment
        android:id="@+id/profile"
        android:name="com.crypto.croytowallet.fragement.Profile"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>