<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
android:paddingBottom="-60dp"
tools:context=".Activity.Kyc">

<LinearLayout
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentEnd="true"
    android:background="@color/toolbar"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:onClick="back"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:text="@string/kyc"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />
</LinearLayout>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/linear"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:inputType="text"
            android:hint="@string/username"
            android:textAlignment="textStart"
            android:textColor="@color/toolbar_text_color"
            android:ems="10"
            android:background="@drawable/verifying_textview"/>


        <EditText
            android:id="@+id/transactionPin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/kyc_country"
            android:inputType="textLongMessage"
            android:textAlignment="textStart"
            android:textColor="@color/toolbar_text_color"
            android:ems="10"
            android:background="@drawable/verifying_textview"/>

        <EditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:textAlignment="textStart"
            android:hint="@string/kyc_address"
            android:lineSpacingExtra="10dp"
            android:background="@drawable/verifying_textview"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/doc_type"
            android:textAlignment="textStart"
            android:textColor="@color/toolbar_text_color"
            android:ems="10"
            android:background="@drawable/verifying_textview"/>


        <TextView
            android:id="@+id/document"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_border"
            android:gravity="center"
            android:text="@string/docu_men"/>

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/button_border"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>